--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,17 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logoapp"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AllDayClinic">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".SplashScreen">
+        <activity android:name=".Login"></activity>
+        <activity android:name=".SplashScreen" />
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".MainActivity2"
+            android:theme="@style/AppTheme.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
